--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #222222;
+	background-color: #FFFF00;
 	color: white;
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 20px;
@@ -20,24 +20,15 @@ body {
 	text-align: center;
 	float:left;
 }
-
-#clock {
-	width: 50%;
-	padding: 40px 0;
-	height: 100px;
-	margin: auto;
-	font-size: 50px;
-	text-align: center;
-	float:left;
 }
 
 #nav {
 	width: 100%;
 	padding: 10px 0;
-	background-color: darkorange;
+	background-color: yellow;
 	text-align: center;
-	border-top: 1px solid darkorange;
-	border-bottom: 1px solid darkorange;
+	border-top: 1px solid yellow;
+	border-bottom: 1px solid yellow;
 	clear: both;
 }
 
@@ -53,9 +44,6 @@ body {
 
 }
 
-#mainarkusze {
-
-}
 
 #mainlinks {
 
@@ -72,7 +60,7 @@ body {
 #footer {
 	height: 50px;
 	text-align: center;
-	background-color: darkorange;
+	background-color: black;
 	padding: 20px;
 	margin-top: auto;
 	margin-bottom: auto;
@@ -90,7 +78,7 @@ ol {
 }
 
 ol > li > a {
-	color: #222222;
+	color: #C0C0C0;
 	text-decoration: none;
 	display: block;
 }
@@ -112,15 +100,15 @@ ol > li:hover {
 }
 
 ol > li:hover > a {
-	color: darkorange;
+	color: silver;
 }
 
 p > a {
-	color: darkorange;
+	color: silver;
 	text-decoration: none;
 
 }
 
 p > a:hover {
-	color: red;
+	color: silver;
 }
