--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #FFFF00;
+	background-color: #008000;
 	color: white;
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 20px;
@@ -25,10 +25,10 @@ body {
 #nav {
 	width: 100%;
 	padding: 10px 0;
-	background-color: yellow;
+	background-color: green;
 	text-align: center;
-	border-top: 1px solid yellow;
-	border-bottom: 1px solid yellow;
+	border-top: 1px solid green;
+	border-bottom: 1px solid green;
 	clear: both;
 }
 
