--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
 	font-weight: bold;
 	margin: auto;
 	text-align: center;
-	color: darkorange;
+	color: green;
 }
 
 #footer {
@@ -64,7 +64,7 @@ body {
 	padding: 20px;
 	margin-top: auto;
 	margin-bottom: auto;
-	color: #222222;
+	color: #00FFFF2;
 }
 
 ol {
